algo refactor